# vex-team-colon-3

./: Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
macro/: Cargo.toml
macro/src/: lib.rs
src/: main.rs
src/subsystems/: drivetrain.rs  intake.rs  mod.rs
