[package]
name = "team-colon-3"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["./macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
snafu = { version = "0.8.5", default-features = false, features = [
    "rust_1_81",
    "unstable-core-error",
] }
vexide = { git = "https://github.com/vexide/vexide.git", version = "0.4.1" }
